# agent_bazaar

./: .env.example  .gitignore  AI_USAGE.md  ChangeLog.md  DEVELOPMENT_PROCESS.md  FEEDBACK.md  GENSYN_AXL.md  HACKATHON_NOTES.md  KEEPERHUB_FEEDBACK.md  Makefile  README.md  SUBMISSION.md  foundry.toml  pyproject.toml
abi/: AgentBazaarEscrow.abi.json  AgentIdentityRegistry.abi.json  AgentReputationRegistry.abi.json  MockUSDC.abi.json
agents/: __init__.py  buyer_agent.py  sdk.py  seller_agent.py
agents/lib/: axl_client.py  config.py  erc8004_client.py  escrow_client.py  keeperhub_client.py  matching.py  (+6 more)
contracts/: AgentBazaarEscrow.sol  AgentIdentityRegistry.sol  AgentReputationRegistry.sol  MockUSDC.sol  README.md
demo/: README.md  market-trace-data.js  market-trace.html
docs/: README.md  agent-integration.md
examples/: seller_sdk_quickstart.py
keeperhub/: workflows.md
schemas/: quote.py  rfq.py
scripts/: axl_mock_node.py  check_env.py  check_gensyn_axl.py  deploy_contracts.sh  deploy_erc8004_registries.sh  export_env.py  generate_market_trace.py  prepare_testnet_funds.sh  register_erc8004_agent.py  run_axl_demo.py  run_demo.py  run_demo.sh  serve_trade_playback.py  start_axl_nodes.sh  start_gensyn_axl_nodes.sh  test_erc8004_feedback.py  test_keeperhub_release.py  test_uniswap_quote.py
tests/: test_axl_client.py  test_keeperhub_client.py  test_market_data_task.py  test_market_trace.py  test_matching.py  test_og_compute_client.py  test_og_storage_client.py  test_schemas.py  test_sdk.py  test_signing.py  test_threat_defense.py  test_uniswap_client.py
(+6 files in other folders)
