[project]
name = "agentbazaar"
version = "0.1.0"
description = "Decentralized spot market protocol for AI agent commerce"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "web3>=6.15",
    "eth-account>=0.11",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "pynacl>=1.5",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
include = ["agents*", "schemas*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "agents"]
